src/optimpack.h

/**
 *  Values returned by OptimPack routines.
 *
 *  `OPK_SUCCESS` indicates that the routine was successfull, any other value
 *  indicate a failure or a warning.
 */
typedef enum {
#define _OPK_STATUS(a,b,c) b = a,
  _OPK_STATUS_LIST
#undef _OPK_STATUS
  OPK_MAX_STATUS
} opk_status_t;
/*---------------------------------------------------------------------------*/
/* DATA TYPES */

/**
 * Integer data type used for array indices in OptimPack.
 */
typedef ptrdiff_t opk_index_t;
/**
 * Data type for boolean (logical) values.
 */
typedef int opk_bool_t;
/** @} */

/*---------------------------------------------------------------------------*/
/* VECTORS AND VECTOR SPACES */

/**
 * @addtogroup Vectors
 * @{
 */

/** Opaque vector type.  This sub-type inherits from `opk_object_t`. */
typedef struct _opk_vector opk_vector_t;
/** Opaque vector space type.  This sub-type inherits from `opk_object_t`. */
typedef struct _opk_vspace opk_vspace_t;
/** @} */

/*---------------------------------------------------------------------------*/
/* REVERSE COMMUNICATION */

/**
 * @brief Code returned by the reverse communication version of optimzation
 * algorithms.
 */
typedef enum {
  OPK_TASK_ERROR       = -1, /**< An error has ocurred. */
  OPK_TASK_START       =  0, /**< Caller must call `start` method. */
  OPK_TASK_COMPUTE_FG  =  1, /**< Caller must compute f(x) and g(x). */
  OPK_TASK_NEW_X       =  2, /**< A new iterate is available. */
  OPK_TASK_FINAL_X     =  3, /**< Algorithm has converged, solution is
                                  available. */
  OPK_TASK_WARNING     =  4  /**< Algorithm terminated with a warning. */
} opk_task_t;
/*---------------------------------------------------------------------------*/
/* LINE SEARCH METHODS */

/**
 * @addtogroup LineSearch
 * @{
 */

/** Opaque linesearch type.  This sub-type inherits from `opk_object_t`. */
typedef struct _opk_lnsrch opk_lnsrch_t;
/**
 * Possible values returned by opk_lnsrch_start and opk_lnsrch_iterate.
 */
typedef enum {
  OPK_LNSRCH_ERROR       = -1,
  OPK_LNSRCH_SEARCH      =  0,
  OPK_LNSRCH_CONVERGENCE =  1,
  OPK_LNSRCH_WARNING     =  2
} opk_lnsrch_task_t;
/**
 * Start a new linesearch.
 *
 * @param ls     - The linesearch object.
 * @param f0     - The function value at the start of the line search (that
 *                 is, for a step of length 0).
 * @param df0    - The dirctional derivative at the start of the line search.
 * @param stp1   - The length of the first step to try (must be between
 *                 `stpmin` and `stpmax`).
 * @param stpmin - The minimum allowed step length (must be nonnegative).
 * @param stpmax - The maximum allowed step length (must be greater than
 *                 `stpmin`).
 *
 * @return The linesearch task, which is normally `OPK_LNSRCH_SEARCH` (zero).
 *         A different value (strictly negative) indicate an error.
 */
extern int
opk_lnsrch_start(opk_lnsrch_t* ls, double f0, double df0,
                 double stp1, double stpmin, double stpmax);
/**
 * Check whether line search has converged or update the step size.
 *
 * @param ls      - The linesearch object.
 * @param stp_ptr - The address at which the step length is stored.  On entry,
 *                  it must be the current step length; on exit, it is updated
 *                  with the next step to try (unless the line search is
 *                  finished).
 * @param f       - The function value for the current step length.
 * @param df      - The directional derivative for the current step length.

 * @return The returned value is strictly negative to indicate an error; it is
 * equal to zero when searching is in progress; it is strictly positive when
 * line search has converged or cannot make any more progresses.
 */
extern int
opk_lnsrch_iterate(opk_lnsrch_t* ls, double* stp_ptr,
                   double f, double df);
/** Get current step lenght. Returned value should be >= 0; -1 is returned in
   case of error. */
extern double
opk_lnsrch_get_step(const opk_lnsrch_t* ls);
extern opk_status_t
opk_lnsrch_get_status(const opk_lnsrch_t* ls);
extern opk_bool_t
opk_lnsrch_has_errors(const opk_lnsrch_t* ls);
extern opk_bool_t
opk_lnsrch_has_warnings(const opk_lnsrch_t* ls);
extern opk_bool_t
opk_lnsrch_converged(const opk_lnsrch_t* ls);
extern opk_bool_t
opk_lnsrch_finished(const opk_lnsrch_t* ls);
/** @} */

/*---------------------------------------------------------------------------*/
/* NON-LINEAR CONJUGATE GRADIENT METHODS */

/**
 * @addtogroup NLCG
 * @{
 */

/** Opaque type for non-linear conjugate gradient optimizers. */
typedef struct _opk_nlcg opk_nlcg_t;
/*
 * Note that the optimizer will hold a reference to the line search object.
 */
extern opk_nlcg_t*
opk_new_nlcg_optimizer_with_line_search(opk_vspace_t* vspace,
                                        unsigned int method,
                                        opk_lnsrch_t* lnsrch);
extern opk_task_t
opk_start_nlcg(opk_nlcg_t* opt);
extern opk_task_t
opk_iterate_nlcg(opk_nlcg_t* opt, opk_vector_t* x,
                 double f, opk_vector_t* g);
extern opk_index_t
opk_get_nlcg_iterations(opk_nlcg_t* opt);
extern opk_index_t
opk_get_nlcg_restarts(opk_nlcg_t* opt);
extern opk_index_t
opk_get_nlcg_evaluations(opk_nlcg_t* opt);
extern opk_task_t
opk_get_nlcg_task(opk_nlcg_t* opt);
/* Rules to compute the search direction in NLCG: */
#define OPK_NLCG_FLETCHER_REEVES        1
#define OPK_NLCG_HESTENES_STIEFEL       2
#define OPK_NLCG_POLAK_RIBIERE_POLYAK   3
#define OPK_NLCG_FLETCHER               4
#define OPK_NLCG_LIU_STOREY             5
#define OPK_NLCG_DAI_YUAN               6
#define OPK_NLCG_PERRY_SHANNO           7
#define OPK_NLCG_HAGER_ZHANG            8
/* The rule can be combined (bitwise or'ed) with the following bits to force
   beta >= 0 (according to Powell's prescription): */
#define OPK_NLCG_POWELL              (1<<8)
/* The rule can be combined (bitwise or'ed) with one of the following bits to
   compute the initial step size from the previous iteration: */
#define OPK_NLCG_SHANNO_PHUA         (1<<9)
/* For instance: (OPK_NLCG_POLAK_RIBIERE_POLYAK | OPK_NLCG_POWELL) merely
   corresponds to PRP+ (Polak, Ribiere, Polyak) while (OPK_NLCG_PERRY_SHANNO |
   OPK_NLCG_SHANNO_PHUA) merely corresponds to the conjugate gradient method
   implemented in CONMIN. */

/* Default settings for non linear conjugate gradient (should correspond to
   the method which is, in general, the most successful). */
#define OPK_NLCG_DEFAULT (OPK_NLCG_HAGER_ZHANG | OPK_NLCG_SHANNO_PHUA)
/** @} */

/**
 * @addtogroup VMLM
 * @{
 */

/** Opaque type for a LBFGS optimizer. */
typedef struct _opk_vmlm opk_vmlm_t;
extern opk_vmlm_t*
opk_new_vmlm_optimizer(opk_vspace_t* vspace, opk_index_t m);
extern opk_task_t
opk_start_vmlm(opk_vmlm_t* opt);
extern opk_task_t
opk_iterate_vmlm(opk_vmlm_t* opt, opk_vector_t* x,
                 double f, opk_vector_t* g);
extern opk_task_t
opk_get_vmlm_task(opk_vmlm_t* opt);
extern opk_index_t
opk_get_vmlm_iterations(opk_vmlm_t* opt);
extern opk_index_t
opk_get_vmlm_evaluations(opk_vmlm_t* opt);
extern opk_index_t
opk_get_vmlm_restarts(opk_vmlm_t* opt);
/*
 * Function: opk_fmin
 *
 *   Search for the minimum of a function.
 *
 *
 * Description:
 *
 *   This function searches for the minimum _xmin_ of the univariate
 *   function f(_x_).
 *
 *   The algorithm requires an initial interval (_a_, _b_).  If the bit
 *   <OPK_FMIN_BOUNDED_BY_A> is set in _flags_, then the value _a_ is a strict
 *   bound for the search.  Similarly, if the bit <OPK_FMIN_BOUNDED_BY_B> is
 *   set in _flags_, then the value _b_ is a strict bound for the search.  If
 *   _a_ and/or _b_ are not exclusive bounds, their values are tried first by
 *   the algorithm.
 *
 *   If the bit <OPK_FMIN_SMOOTH> is set in _flags_, then the function is
 *   assumed to be smooth and Brent's algorithm [1] is used to find the
 *   minimum; otherwise, the golden section method is used.
 *
 *   The result is stored into array _out_ as follows
 *
 *    - out[0] = the approximative solution _xmin_
 *    - out[1] = the lower bound _xlo_of the final interval
 *    - out[2] = the upper bound _xhi_ of the final interval
 *    - out[3] = f(_xmin_)
 *    - out[4] = f(_xlo_)
 *    - out[5] = f(_xhi_)
 *    - out[6] = the number of function evaluations
 *
 *   Depending whether the input interval has exclusive bounds, the minimum
 *   number of function evaluations is between 1 and 3 whatever is the value of
 *   _maxeval_.  If the minimum has not been bracketted, the result is:
 *
 *    - out[0:2] = {_u_, _v_, _w_} and
 *    - out[3:5] = {f(_u_), f(_v_), f(_w_)}
 *
 *   with {_u_, _v_, _w_} the 3 last positions tried by the algorithm (in no
 *   particular order).
 *
 * Parameters:
 *   f       - The function to minimize.
 *   a       - The first point of the initial interval.
 *   b       - The other point of the initial interval.
 *   flags   - A bitwise combination of flags (see description).
 *   maxeval - If non-negative, the maximum number of function evaluations;
 *             otherwise, no limits.
 *   prec    - The relative precision: the algorithm stop when the uncertainty
 *             is less or equal _prec_ times the magnitude of the solution.
 *             If _prec_ is strictly negative, then a default precision of
 *             sqrt(_epsilon_) is used with _epsilon_ the machine relative
 *             precision.
 *   out     - A 7-element array to store the result.
 *
 * Returns:
 *    0 on convergence, 1 if too many iterations but minimum was bracketted, 2
 *    if too many iterations but minimum was *not* bracketted, and -1 on error
 *    (invalid input arguments).
 *
 * References:
 *    [1] Brent, R.P. 1973, "Algorithms for Minimization without Derivatives"
 *        (Englewood Cliffs, NJ: Prentice-Hall), Chapter 5.
 *
 * See Also:
 *    <opk_fmin_with_context>.
 */
extern int
opk_fmin(double (*f)(double x), double a, double b,
         unsigned int flags, long maxeval, double prec,
         double out[7]);
/*
 * Function: opk_fmin_with_context
 *
 *   Search for the minimum of a function.
 *
 * Description:
 *
 *   This function is identical to <opk_fmin> except that the user-defined
 *   function is called as f(_data_, _x_) to evaluate the funtion at _x_.
 *   The _data_ argument is simply passed to the user-defined function and may
 *   be used to store any parameters (but the variable value) needed by the
 *   function.
 *
 * Parameters:
 *   f         - The function to minimize.
 *   a         - The first point of the initial interval.
 *   b         - The other point of the initial interval.
 *   flags     - A bitwise combination of flags.
 *   maxeval   - If non-negative, the maximum number of function
 *               evaluations; otherwise no limits.
 *   prec      - The relative precision.
 *   out       - A 7-element array to store the result.
 *   data      - Anything needed by the user-defined function.
 *
 * Returns:
 *   Same value as <spf_fmin>.
 *
 * See Also:
 *   <opk_fmin>.
 */
extern int
opk_fmin_with_context(double (*f)(void *data, double x),
                      double a, double b, unsigned int flags,
                      long maxeval, double prec,
                      double out[7], void *data);